# lite-msgbox

./: .gitmodules  CMakeLists.txt  README.md
qss/: default.qss
scripts/: qss_to_style_h.sh
src/: main.cpp  maindialog.cpp  maindialog.h  style.h
